# academic-research-os

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  research.toml  research_protocol.md
.claude/: CLAUDE.md
docs/: academic_validity_checklist.md  anti-hallucination.md  evidence-ledger.md  experiment-loop.md  faq.md  huong-dan-tieng-viet.md  installation.md  prior-art-and-sota.md  quickstart.md  session-memory.md  stage-gates.md  venue-targeting.md  workflow.md
evidence/: claim_registry.md  evidence_matrix.csv
outputs/: draft.md  slides_outline.md
prompts/: adversarial_reviewer.md  claim_checker.md  paper_extractor.md  synthesis_prompt.md
research_os/: __init__.py  __main__.py  cli.py  config.py
research_questions/: RQ-001-template.md
screening/: inclusion_exclusion.md  prisma_flow.md  screening_table.csv
scripts/: build_evidence_matrix.py  check_claims_without_sources.py  import_zotero_bib.py  install.sh  new-project.sh  validate_bib_metadata.py  validate_citations.py  validate_csv_rows.py  validate_evidence_matrix.py  verify.sh
search/: query_bank.md  search_log.csv  sources.yaml
synthesis/: argument_map.md  gaps_and_opportunities.md  literature_map.md
templates/: claim_evidence_table.template.md  contribution_map.template.md  decision_log.template.md  dialectical_validation.template.md  evidence_ledger.template.md  experiment_matrix.template.md  gap_scout_report.template.md  hypothesis_registry.template.md  literature_matrix.template.md  paper_brief.template.md  prior_art_competition_table.template.md  (+9 more)
(+70 files in other folders)
